welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
if(a+b==10 || a+c==10 || b+c=10){return 10}
                      ^